--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,10 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="goude.se" description="Personal site">
+<Layout
+  title="Entry Point"
+  description="This site is where I keep some of my notes and put stuff that I find useful."
+>
   <!-- article: a self-contained, citable knowledge object; your homepage is an index object -->
   <article id="entry-point">
     <!-- header: title + framing for this page -->
@@ -16,7 +19,7 @@ import Layout from "@/layouts/Layout.astro";
       </p>
     </header>
 
-    <!-- section: a major grouping of links/notes on the homepage -->
+    <!-- section: a major grouping of links/notes -->
     <section id="tea">
       <h2>Have a Cup of Tea</h2>
 
