--- a/src/pages/t/do-olls-that-will-talk/index.astro
+++ b/src/pages/t/do-olls-that-will-talk/index.astro
@@ -5,7 +5,7 @@ import "./_score.css";
 ---
 
 <Layout
-  title="The Do-olls That Will Talk - goude.se"
+  title="The Do-olls That Will Talk"
   description="It's Beginning to Look a Lot Like Christmas - timing analysis"
 >
   <script src="https://cdn.jsdelivr.net/npm/wavesurfer.js@7"></script>
