--- a/src/pages/t/markup.astro
+++ b/src/pages/t/markup.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
-  title="Markup Test – goude.se"
+  title="Markup Test"
   description="Comprehensive HTML rendering test page"
   current="markup"
 >
