--- a/src/pages/t/knowledge.astro
+++ b/src/pages/t/knowledge.astro
@@ -4,7 +4,7 @@ import Md from "@/components/Md.astro";
 ---
 
 <Layout
-  title="Knowledge Base - goude.se"
+  title="Knowledge Base"
   description="Technical notes and solutions"
 >
   <h1>Knowledge Base</h1>
