--- a/src/pages/t/knowledge.astro
+++ b/src/pages/t/knowledge.astro
@@ -3,10 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import Md from "@/components/Md.astro";
 ---
 
-<Layout
-  title="Knowledge Base"
-  description="Technical notes and solutions"
->
+<Layout title="Knowledge Base" description="Technical notes and solutions">
   <h1>Knowledge Base</h1>
 
   <section>
